--- a/frontend/src/lib/question/question.component.html
+++ b/frontend/src/lib/question/question.component.html
@@ -1,9 +1,10 @@
 <div id="head">
-  <mat-form-field [ngStyle]="{'width.ch': titleInput.value.length, 'min-width.ch': 20, 'max-width.ch': 30}">
+
+  <mat-form-field class="questiontitle" >
     <input  matInput
             #titleInput
             name="questionTitleInput"
-            class="questiontitle"
+            class="inputfield"
             type="text"
             [(ngModel)]="this.question.title"
             required/>
@@ -11,17 +12,14 @@
   </mat-form-field>
 </div>
 
-<mat-form-field appearance="fill"
-                [ngStyle]="{'width.ch': descInput.value.length, 'min-width.ch': 20, 'max-width.ch': 25}">
-  <mat-label class="inputfield">Add a description:</mat-label>
+<mat-form-field id="description" appearance="fill">
+  <mat-label class="inputfield">Add a description (optional)</mat-label>
   <textarea matInput
+            oninput='this.style.height = "";this.style.height = this.scrollHeight + "px"'
             id="textarena"
             name="questionDescriptionInput"
             #descInput
             [(ngModel)]="this.question.description"
-            cdkTextareaAutosize
-            cdkAutosizeMinRows="1"
-            cdkAutosizeMaxRows="10"
             placeholder="Enter a description..."
   >
     </textarea>
@@ -31,11 +29,11 @@
 <div id="body">
   <form id="questionSelect">
     <mat-radio-group aria-label="Select an option" required>
-      <mat-radio-button (click)="chooseYesNoAnswer()" value="1" [checked]="question.type == 'yesNoAnswer'">Yes/No
-        Answer
+      <mat-radio-button (click)="chooseYesNoAnswer()" value="1" [checked]="question.type == 'yesNoAnswer'">
+        Yes/No Answer
       </mat-radio-button>
-      <mat-radio-button (click)="chooseFixedAnswers()" value="2" [checked]="question.type == 'fixedAnswers'">Fixed
-        Answers
+      <mat-radio-button (click)="chooseFixedAnswers()" value="2" [checked]="question.type == 'fixedAnswers'">
+        Fixed Answers
       </mat-radio-button>
       <mat-radio-button (click)="chooseIndividualAnswers()" value="3" [checked]="question.type == 'individualAnswer'">
         Individual Answers
@@ -55,9 +53,9 @@
       </mat-form-field>
     </div>
 <section  id="answerlist">
-    <ul>
+    <ul style="padding: 0;">
       <li *ngFor="let answer of this.question.fixedAnswers">
-        {{answer}}
+        <div id="answertext">{{answer}}</div>
         <button mat-icon-button (click)="deleteAnswer(answer)">
           <mat-icon>delete</mat-icon>
         </button>
