--- a/frontend/src/lib/router/login/login.component.css
+++ b/frontend/src/lib/router/login/login.component.css
@@ -43,12 +43,12 @@
 }
 
 .loginfield #loginwindow .txt_field{
+  width: 80%;
+  max-width: 400px;
   position: relative;
   top: 20%;
   border-bottom: 2px solid #adadad;
-  margin: 50px 0;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin: 50px auto 0 auto;
 }
 
 /*Username and Password field*/
