--- a/frontend/src/lib/router/survey/survey.component.css
+++ b/frontend/src/lib/router/survey/survey.component.css
@@ -2,7 +2,7 @@
   text-align: center;
   align-items: center;
   position: relative;
-
+  padding: 0;
 }
 
 #head{
@@ -16,7 +16,7 @@
   margin-left: auto;
   margin-right: auto;
 
-  color:orange;
+  color: #FF8000;
   border-radius: 10px 10px 10px 10px;
 }
 
@@ -26,8 +26,7 @@
     width: 60%;
     display: block;
     background-color: #eee;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     background-color: white;
     height: auto;
     margin-top: 5vh;
@@ -36,8 +35,12 @@
     border: 1px solid lightgray;
 }
 
-#body ul{
+#body li{
   list-style-type: none;
+  min-width: 150px;
+  max-width: 80%;
+  width: 100%;
+  margin: auto;
 }
 
 #submitButton{
@@ -55,7 +58,7 @@
   height: auto;
   border-radius: 10px 10px 10px 10px;
   border: 1px solid lightgray;
-  
+
 
   text-align: center;
   font-size: 30px;
