--- a/frontend/src/lib/survey-question/survey-question.component.css
+++ b/frontend/src/lib/survey-question/survey-question.component.css
@@ -28,17 +28,15 @@
 
 .description h3{
   font-size: 1.1em;
-  margin-bottom: 1%;
 }
 
 .description {
-  width: fit-content;
+  min-width: 150px;
+  max-width: 500px;
   padding-left: 5px;
   padding-right: 5px;
-  border: 1px solid grey;
   font-size: 1em;
-  border-radius: 5px 5px 5px 5px;
-  margin-bottom: 2%;
+  margin-bottom: 2em;
 
 }
 
