--- a/frontend/src/lib/survey-question/survey-question.component.html
+++ b/frontend/src/lib/survey-question/survey-question.component.html
@@ -4,7 +4,7 @@
 
 
 <section class="description" *ngIf="descriptionProvided()">
-  <h3>description:</h3>
+  <h3><u>Description:</u></h3>
   {{this.question.description}}
 </section>
 
