changed "survey" to "poll" in submit screen

--- a/frontend/src/lib/router/survey/survey.component.html
+++ b/frontend/src/lib/router/survey/survey.component.html
@@ -27,7 +27,7 @@
 
   <ng-template #callAPIDialog>
   <mat-dialog-content class="mat-typography">
-    <h2>Submit survey?</h2>
+    <h2>Submit poll?</h2>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancel</button>
@@ -38,7 +38,7 @@
 </div>
 
 <div class="altView" *ngIf="this.submited">
-  Survey submitted<br>
+  Poll submitted<br>
   <mat-icon color="primary" id="submittedIcon">check_circle_outline</mat-icon>
   <p>(You can close the Tab)</p>
 </div>
