--- a/frontend/src/lib/router/survey/survey.component.css
+++ b/frontend/src/lib/router/survey/survey.component.css
@@ -5,49 +5,52 @@
   padding: 0;
 }
 
-#head{
+#poll {
+  justify-content: center;
+  width: 60%;
+  margin: auto;
+
+}
+
+#headline{
+  line-height: 30px;
   font-size: 2.4em;
   font-weight: 500;
   background: white;
   width: fit-content;
   padding: 20px;
   display: block;
-  margin-top: 10vh;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 10vh auto 0 auto;
+
 
   color: #FF8000;
   border-radius: 10px 10px 10px 10px;
 }
 
-#body{
-
-    display: block;
-    width: 60%;
-    display: block;
-    background-color: #eee;
-    margin: auto;
-    background-color: white;
-    height: auto;
-    margin-top: 5vh;
-
-    border-radius: 10px 10px 10px 10px;
-    border: 1px solid lightgray;
+#formBody{
+  position: relative;
+  width: 100%;
+  font-size: 1em;
+  background-color: white;
+  height: auto;
+  border-radius: 10px 10px 10px 10px;
+  border: 1px solid lightgray;
+  margin: 5vh auto 0 auto;
 }
 
-#body li{
+#formBody li{
   list-style-type: none;
+
   min-width: 150px;
   max-width: 80%;
   width: 100%;
+  height: auto;
   margin: auto;
+  overflow-wrap: break-word;
 }
 
 #submitButton{
-
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 1vh;
+  margin: 1vh auto 10vh auto;
 }
 
 .altView {
@@ -81,6 +84,7 @@
 .altView #submittedIcon {
   margin-top: 6%;
   margin-bottom: 1%;
+  margin: 6% 0 1% 0;
 }
 
 #spinner {
@@ -91,9 +95,17 @@
   transform: translate(-50%, -50%);
 }
 
+@media only screen and (max-width: 768px) {
+  #poll {
+    width: 100%;
+  }
 
-#debug {
-  position: fixed;
-  bottom: 1%;
-  left: 1%;
+  #headline {
+    font-size: 25px;
+  }
+
+  #formBody {
+    font-size: 11px;
+  }
 }
+
