--- a/frontend/src/lib/router/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.html
@@ -25,17 +25,17 @@
     </button>
     </div>
 
-    <button mat-menu-item (click)="showChangePassword()">
+    <button mat-menu-item (click)="showChangePassword()" title="Change Password">
       <mat-icon>https</mat-icon>
       <span>Change Password</span>
     </button>
 
-    <button mat-menu-item (click)="showChangeUsername()">
+    <button mat-menu-item (click)="showChangeUsername()" title="Change Username">
       <mat-icon>face</mat-icon>
       <span>Change Username</span>
     </button>
 
-    <button mat-menu-item (click)="logout()">
+    <button mat-menu-item (click)="logout()" title="Logout">
       <mat-icon>exit_to_app</mat-icon>
       <span>Logout</span>
     </button>
@@ -176,7 +176,8 @@
   <div class="headline">Change Username</div>
 
   <div class="txt_field">
-    <input type="text" required
+    <input name="nameInput"
+           type="text" required
            [value]="this.changedUsername"
            (change)="setnewUsername($event)"
            matTooltip="Your new Username"
@@ -186,7 +187,7 @@
   </div>
 
   <div class="change" >
-    <button mat-flat-button color="primary" (click)="changemyUsername()">Change </button>
+    <button mat-flat-button color="primary" name="changeNameButton" (click)="changemyUsername()">Change </button>
   </div>
   <div class="cancel" >
     <button mat-flat-button color="primary" (click)="hideChangeUsername()">Cancel </button>
