--- a/frontend/src/lib/router/survey/survey.component.html
+++ b/frontend/src/lib/router/survey/survey.component.html
@@ -1,35 +1,34 @@
 <mat-spinner id="spinner" *ngIf="!this.loaded"></mat-spinner>
 
-<div id="poll">
-  <div *ngIf="this.errorMessage == undefined && !this.submited && this.loaded">
-    <div id="headline">
-      {{this.poll.name}}
-    </div>
+<div id="poll" *ngIf="this.errorMessage == undefined && !this.submited && this.loaded">
+  <div id="headline">
+    {{this.poll.name}}
+  </div>
 
-    <div id="formBody">
-      <form [formGroup]="pollForm" >
-        <ul *ngFor="let question of this.poll.questions">
-          <li>
-            <surveyQuestion
-              [question]="question"
-              [parentForm]="pollForm"
-            ></surveyQuestion>
-            <mat-divider></mat-divider>
-          </li>
-        </ul>
-      </form>
-    </div>
+  <div id="formBody">
+    <form [formGroup]="pollForm" >
+      <ul *ngFor="let question of this.poll.questions">
+        <li>
+          <surveyQuestion
+            [question]="question"
+            [parentForm]="pollForm"
+          ></surveyQuestion>
+          <mat-divider></mat-divider>
+        </li>
+      </ul>
+    </form>
+  </div>
 
-    <div id="submitButton">
-        <button mat-flat-button color="primary" [disabled]="this.pollForm.disable && this.pollForm.invalid" (click)="openDialog()">Submit</button>
-    </div>
+  <div id="submitButton">
+    <button mat-flat-button color="primary" [disabled]="this.pollForm.disable && this.pollForm.invalid" (click)="openDialog()">Submit</button>
   </div>
 </div>
 
-  <ng-template #callAPIDialog>
+<ng-template #callAPIDialog>
   <mat-dialog-content class="mat-typography">
     <h2>Submit poll?</h2>
   </mat-dialog-content>
+
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancel</button>
     <button mat-button [mat-dialog-close]="true" cdkFocusInitial (click)="submitSurvey()">Submit</button>
