--- a/frontend/src/lib/router/survey/survey.component.css
+++ b/frontend/src/lib/router/survey/survey.component.css
@@ -26,8 +26,11 @@
   margin: 5vh auto 0 auto;
 }
 
-#formBody li{
+#formBody ul{
   padding: 0;
+}
+
+#formBody li{
   list-style-type: none;
   min-width: 150px;
   max-width: 80%;
