--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -21,6 +21,7 @@
   background-color: #ffffff;
   color: #ff8000;
   font-weight: 600;
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.25)
 }
 
 .toolbar .text {
